Fixed Select dropdown body positioned behind other form elements (#523)

--- a/frontend/src/app/compliance/shared/components/utm-compliance-schedule-create/utm-compliance-schedule-create.component.scss
+++ b/frontend/src/app/compliance/shared/components/utm-compliance-schedule-create/utm-compliance-schedule-create.component.scss
@@ -53,3 +53,7 @@
   }
 
 }
+
+.utm-box {
+  z-index: auto!important;
+}
